Fix T54324: remove stencil entries from weight paint keymap

Reviewed By: mont29

Differential Revision: http://developer.blender.org/D3178